--- a/archives/toutiao-search/2024-03-19.md
+++ b/archives/toutiao-search/2024-03-19.md
@@ -1,50 +1,65 @@
 # 2024-03-19
 
-共 146 条
+共 159 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 19 2024 10:13:05 GMT+0800 (China Standard Time) -->
-1. [恒大地产放弃申辩权利](https://so.toutiao.com/search?keyword=恒大地产放弃申辩权利)
+<!-- 最后更新时间 Tue Mar 19 2024 11:00:54 GMT+0800 (China Standard Time) -->
+1. [恒大被罚41.75亿到底怎么缴](https://so.toutiao.com/search?keyword=恒大被罚41.75亿到底怎么缴)
 1. [专家：普京胜选为何最看重中方贺电](https://so.toutiao.com/search?keyword=专家：普京胜选为何最看重中方贺电)
 1. [南水北调工程累计调水700亿立方米](https://so.toutiao.com/search?keyword=南水北调工程累计调水700亿立方米)
 1. [专家：鸡骨泥用于淀粉肠并不算违规](https://so.toutiao.com/search?keyword=专家：鸡骨泥用于淀粉肠并不算违规)
-1. [博主：比亚迪清北校招让我理解张雪峰](https://so.toutiao.com/search?keyword=博主：比亚迪清北校招让我理解张雪峰)
+1. [恒大地产放弃申辩权利](https://so.toutiao.com/search?keyword=恒大地产放弃申辩权利)
 1. [英媒曝凯特术后首次露面视频](https://so.toutiao.com/search?keyword=英媒曝凯特术后首次露面视频)
+1. [博主：比亚迪清北校招让我理解张雪峰](https://so.toutiao.com/search?keyword=博主：比亚迪清北校招让我理解张雪峰)
+1. [网约车司机称每天跑够8小时才够回本](https://so.toutiao.com/search?keyword=网约车司机称每天跑够8小时才够回本)
 1. [老外感慨凌晨的中国非常安全](https://so.toutiao.com/search?keyword=老外感慨凌晨的中国非常安全)
-1. [网友：不能因315就否认淀粉肠行业](https://so.toutiao.com/search?keyword=网友：不能因315就否认淀粉肠行业)
-1. [林剑班主任：他出身军人家庭](https://so.toutiao.com/search?keyword=林剑班主任：他出身军人家庭)
 1. [比亚迪将采用英伟达汽车芯片](https://so.toutiao.com/search?keyword=比亚迪将采用英伟达汽车芯片)
 1. [河北警方：初中生被害案系有预谋作案](https://so.toutiao.com/search?keyword=河北警方：初中生被害案系有预谋作案)
 1. [大熊猫美香添添视频造假？官方辟谣](https://so.toutiao.com/search?keyword=大熊猫美香添添视频造假？官方辟谣)
 1. [河南驻马店通报中学生跳楼事件](https://so.toutiao.com/search?keyword=河南驻马店通报中学生跳楼事件)
-1. [女生拍帅气新兵被男友抓包](https://so.toutiao.com/search?keyword=女生拍帅气新兵被男友抓包)
-1. [赵丽颖新剧首播口碑](https://so.toutiao.com/search?keyword=赵丽颖新剧首播口碑)
-1. [校园霸凌受害者缘何又成施暴者](https://so.toutiao.com/search?keyword=校园霸凌受害者缘何又成施暴者)
-1. [班主任对校园暴力“放狠话”](https://so.toutiao.com/search?keyword=班主任对校园暴力“放狠话”)
-1. [中国为何不惧西方“绞杀”C919飞机](https://so.toutiao.com/search?keyword=中国为何不惧西方“绞杀”C919飞机)
+1. [21岁百万粉女网红被判刑](https://so.toutiao.com/search?keyword=21岁百万粉女网红被判刑)
+1. [网友：不能因315就否认淀粉肠行业](https://so.toutiao.com/search?keyword=网友：不能因315就否认淀粉肠行业)
+1. [男子为骗保半年出了70起交通事故](https://so.toutiao.com/search?keyword=男子为骗保半年出了70起交通事故)
+1. [媒体：娃哈哈不是“神”](https://so.toutiao.com/search?keyword=媒体：娃哈哈不是“神”)
+1. [林剑班主任：他出身军人家庭](https://so.toutiao.com/search?keyword=林剑班主任：他出身军人家庭)
 1. [多国领导人祝贺普京连任](https://so.toutiao.com/search?keyword=多国领导人祝贺普京连任)
+1. [赵丽颖新剧首播口碑](https://so.toutiao.com/search?keyword=赵丽颖新剧首播口碑)
+1. [女生连扇跪地男生耳光 学校回应](https://so.toutiao.com/search?keyword=女生连扇跪地男生耳光+学校回应)
+1. [女生拍帅气新兵被男友抓包](https://so.toutiao.com/search?keyword=女生拍帅气新兵被男友抓包)
+1. [班主任对校园暴力“放狠话”](https://so.toutiao.com/search?keyword=班主任对校园暴力“放狠话”)
+1. [《与凤行》沈璃和孙悟空有什么区别](https://so.toutiao.com/search?keyword=《与凤行》沈璃和孙悟空有什么区别)
 1. [证监会开出历史第二大罚单](https://so.toutiao.com/search?keyword=证监会开出历史第二大罚单)
 1. [台扬言增兵金门 三大舰机打头阵](https://so.toutiao.com/search?keyword=台扬言增兵金门+三大舰机打头阵)
-1. [普京掌权20年俄罗斯强大了吗](https://so.toutiao.com/search?keyword=普京掌权20年俄罗斯强大了吗)
-1. [黄仁勋宣布推出新一代AI芯片](https://so.toutiao.com/search?keyword=黄仁勋宣布推出新一代AI芯片)
 1. [三只羊就销售315点名梅菜扣肉致歉](https://so.toutiao.com/search?keyword=三只羊就销售315点名梅菜扣肉致歉)
-1. [恒大被罚41.75亿到底怎么缴](https://so.toutiao.com/search?keyword=恒大被罚41.75亿到底怎么缴)
-1. [饲养员驱打大熊猫 研究中心致歉](https://so.toutiao.com/search?keyword=饲养员驱打大熊猫+研究中心致歉)
-1. [老人退休金被冒领16年 金额超20万](https://so.toutiao.com/search?keyword=老人退休金被冒领16年+金额超20万)
-1. [“7090政策”退出上海土地市场](https://so.toutiao.com/search?keyword=“7090政策”退出上海土地市场)
-1. [男子戴硅胶面具进上海小区偷盗](https://so.toutiao.com/search?keyword=男子戴硅胶面具进上海小区偷盗)
-1. [普京胜选后发表8分钟感言](https://so.toutiao.com/search?keyword=普京胜选后发表8分钟感言)
-1. [齐家滨已任中央组织部副部长](https://so.toutiao.com/search?keyword=齐家滨已任中央组织部副部长)
-1. [《与凤行》沈璃和孙悟空有什么区别](https://so.toutiao.com/search?keyword=《与凤行》沈璃和孙悟空有什么区别)
+1. [王楚钦世界排名占据三项第一](https://so.toutiao.com/search?keyword=王楚钦世界排名占据三项第一)
 1. [现在小学生身高就是个迷](https://so.toutiao.com/search?keyword=现在小学生身高就是个迷)
-1. [TVB老戏骨陈狄克病逝](https://so.toutiao.com/search?keyword=TVB老戏骨陈狄克病逝)
-1. [天水麻辣烫怎么火的？甘肃文旅揭秘](https://so.toutiao.com/search?keyword=天水麻辣烫怎么火的？甘肃文旅揭秘)
+1. [女孩被12岁男孩杀害 家属坚持申诉](https://so.toutiao.com/search?keyword=女孩被12岁男孩杀害+家属坚持申诉)
+1. [天水连夜把8000年前的“小祖宗”请出来](https://so.toutiao.com/search?keyword=天水连夜把8000年前的“小祖宗”请出来)
+1. [普京掌权20年俄罗斯强大了吗](https://so.toutiao.com/search?keyword=普京掌权20年俄罗斯强大了吗)
+1. [“7090政策”退出上海土地市场](https://so.toutiao.com/search?keyword=“7090政策”退出上海土地市场)
+1. [中国为何不惧西方“绞杀”C919飞机](https://so.toutiao.com/search?keyword=中国为何不惧西方“绞杀”C919飞机)
+1. [许家印曾指导硕士写财务风险论文](https://so.toutiao.com/search?keyword=许家印曾指导硕士写财务风险论文)
+1. [好友爆料泰森出场费2000万美元](https://so.toutiao.com/search?keyword=好友爆料泰森出场费2000万美元)
+1. [老人退休金被冒领16年 金额超20万](https://so.toutiao.com/search?keyword=老人退休金被冒领16年+金额超20万)
+1. [男子戴硅胶面具进上海小区偷盗](https://so.toutiao.com/search?keyword=男子戴硅胶面具进上海小区偷盗)
 1. [当中华小子小虎发型照进现实](https://so.toutiao.com/search?keyword=当中华小子小虎发型照进现实)
+1. [TVB老戏骨陈狄克病逝](https://so.toutiao.com/search?keyword=TVB老戏骨陈狄克病逝)
+1. [黄仁勋宣布推出新一代AI芯片](https://so.toutiao.com/search?keyword=黄仁勋宣布推出新一代AI芯片)
+1. [1个月全国新开甘肃麻辣烫超150家](https://so.toutiao.com/search?keyword=1个月全国新开甘肃麻辣烫超150家)
+1. [普京胜选后发表8分钟感言](https://so.toutiao.com/search?keyword=普京胜选后发表8分钟感言)
+1. [以军称打死一名哈马斯高级官员](https://so.toutiao.com/search?keyword=以军称打死一名哈马斯高级官员)
+1. [天水麻辣烫怎么火的？甘肃文旅揭秘](https://so.toutiao.com/search?keyword=天水麻辣烫怎么火的？甘肃文旅揭秘)
+1. [《与凤行》沈璃人设傲娇又可爱](https://so.toutiao.com/search?keyword=《与凤行》沈璃人设傲娇又可爱)
+1. [近期多名干部涉及赌博被处分](https://so.toutiao.com/search?keyword=近期多名干部涉及赌博被处分)
+1. [淀粉肠中的鸡骨泥能吃吗](https://so.toutiao.com/search?keyword=淀粉肠中的鸡骨泥能吃吗)
+1. [绿营声称“看重质询”却缩时间被批](https://so.toutiao.com/search?keyword=绿营声称“看重质询”却缩时间被批)
+1. [又到了吃蕨菜的季节](https://so.toutiao.com/search?keyword=又到了吃蕨菜的季节)
+1. [校园霸凌受害者缘何又成施暴者](https://so.toutiao.com/search?keyword=校园霸凌受害者缘何又成施暴者)
+1. [饲养员驱打大熊猫 研究中心致歉](https://so.toutiao.com/search?keyword=饲养员驱打大熊猫+研究中心致歉)
+1. [齐家滨已任中央组织部副部长](https://so.toutiao.com/search?keyword=齐家滨已任中央组织部副部长)
 1. [教育部原司长王登峰一审获刑17年](https://so.toutiao.com/search?keyword=教育部原司长王登峰一审获刑17年)
 1. [天水麻辣烫爆火之后](https://so.toutiao.com/search?keyword=天水麻辣烫爆火之后)
-1. [淀粉肠中的鸡骨泥能吃吗](https://so.toutiao.com/search?keyword=淀粉肠中的鸡骨泥能吃吗)
 1. [许家印拟被罚4700万元](https://so.toutiao.com/search?keyword=许家印拟被罚4700万元)
-1. [又到了吃蕨菜的季节](https://so.toutiao.com/search?keyword=又到了吃蕨菜的季节)
 1. [梅西退出阿根廷本期国家队名单](https://so.toutiao.com/search?keyword=梅西退出阿根廷本期国家队名单)
 1. [退伍复学男生带室友爆改宿舍](https://so.toutiao.com/search?keyword=退伍复学男生带室友爆改宿舍)
 1. [幼儿园关停潮下幼师如何自救](https://so.toutiao.com/search?keyword=幼儿园关停潮下幼师如何自救)
@@ -56,7 +71,6 @@
 1. [证监会：许家印组织实施财务造假](https://so.toutiao.com/search?keyword=证监会：许家印组织实施财务造假)
 1. [博主分析中国为何不怕西方“绞杀”C919飞机](https://so.toutiao.com/search?keyword=博主分析中国为何不怕西方“绞杀”C919飞机)
 1. [班主任谈发言人林剑：出身军人家庭](https://so.toutiao.com/search?keyword=班主任谈发言人林剑：出身军人家庭)
-1. [《与凤行》沈璃人设傲娇又可爱](https://so.toutiao.com/search?keyword=《与凤行》沈璃人设傲娇又可爱)
 1. [普京何以压倒性胜出俄总统选举](https://so.toutiao.com/search?keyword=普京何以压倒性胜出俄总统选举)
 1. [95后高颜值“猪保姆”走红](https://so.toutiao.com/search?keyword=95后高颜值“猪保姆”走红)
 1. [市监所回应水果捞被指用鬼秤](https://so.toutiao.com/search?keyword=市监所回应水果捞被指用鬼秤)
@@ -81,7 +95,6 @@
 1. [女子山顶攀爬石头手滑摔下](https://so.toutiao.com/search?keyword=女子山顶攀爬石头手滑摔下)
 1. [315打假击败全国99%大学生](https://so.toutiao.com/search?keyword=315打假击败全国99%大学生)
 1. [315后山姆和Costco生意会更好吗](https://so.toutiao.com/search?keyword=315后山姆和Costco生意会更好吗)
-1. [女生连扇跪地男生耳光 学校回应](https://so.toutiao.com/search?keyword=女生连扇跪地男生耳光+学校回应)
 1. [女子捡包上交后却被通知做笔录](https://so.toutiao.com/search?keyword=女子捡包上交后却被通知做笔录)
 1. [淀粉肠中的鸡骨泥能给人吃吗](https://so.toutiao.com/search?keyword=淀粉肠中的鸡骨泥能给人吃吗)
 1. [网传雅江山火救援力量正撤出不实](https://so.toutiao.com/search?keyword=网传雅江山火救援力量正撤出不实)
