--- a/archives/toutiao-search/2024-03-19.md
+++ b/archives/toutiao-search/2024-03-19.md
@@ -1,72 +1,91 @@
 # 2024-03-19
 
-共 180 条
+共 198 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 19 2024 12:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Mar 19 2024 13:00:34 GMT+0800 (China Standard Time) -->
 1. [恒大被罚41.75亿到底怎么缴](https://so.toutiao.com/search?keyword=恒大被罚41.75亿到底怎么缴)
-1. [网约车司机称每天跑够8小时才回本](https://so.toutiao.com/search?keyword=网约车司机称每天跑够8小时才回本)
+1. [沈阳一轿车冲入人行道致1死4伤](https://so.toutiao.com/search?keyword=沈阳一轿车冲入人行道致1死4伤)
 1. [中国经济回升向好之势从何而来](https://so.toutiao.com/search?keyword=中国经济回升向好之势从何而来)
 1. [许家印被限制高消费](https://so.toutiao.com/search?keyword=许家印被限制高消费)
-1. [专家：普京胜选为何最看重中方贺电](https://so.toutiao.com/search?keyword=专家：普京胜选为何最看重中方贺电)
+1. [老外打车不给钱还骂的哥蠢货](https://so.toutiao.com/search?keyword=老外打车不给钱还骂的哥蠢货)
+1. [测试车高速逃费 小米：已补缴](https://so.toutiao.com/search?keyword=测试车高速逃费+小米：已补缴)
 1. [英媒曝凯特术后首次露面视频](https://so.toutiao.com/search?keyword=英媒曝凯特术后首次露面视频)
-1. [专家：鸡骨泥用于淀粉肠并不算违规](https://so.toutiao.com/search?keyword=专家：鸡骨泥用于淀粉肠并不算违规)
-1. [社牛英语老师偶遇邓超](https://so.toutiao.com/search?keyword=社牛英语老师偶遇邓超)
+1. [专家：普京胜选为何最看重中方贺电](https://so.toutiao.com/search?keyword=专家：普京胜选为何最看重中方贺电)
+1. [英伟达官宣世界首款人形机器人模型](https://so.toutiao.com/search?keyword=英伟达官宣世界首款人形机器人模型)
 1. [五问恒大被罚：烂尾楼损失如何挽回](https://so.toutiao.com/search?keyword=五问恒大被罚：烂尾楼损失如何挽回)
+1. [被害初中生学校称未发现校园霸凌](https://so.toutiao.com/search?keyword=被害初中生学校称未发现校园霸凌)
+1. [广西核潜艇车间生产核弹头？谣言](https://so.toutiao.com/search?keyword=广西核潜艇车间生产核弹头？谣言)
+1. [主播曝“上门按摩”服务套路](https://so.toutiao.com/search?keyword=主播曝“上门按摩”服务套路)
+1. [女子把婴儿车推到路上转身就走](https://so.toutiao.com/search?keyword=女子把婴儿车推到路上转身就走)
+1. [双汇食品客服回应王中王吃出异物](https://so.toutiao.com/search?keyword=双汇食品客服回应王中王吃出异物)
+1. [港媒：韩国瑜不会被职务束缚住](https://so.toutiao.com/search?keyword=港媒：韩国瑜不会被职务束缚住)
+1. [专家：鸡骨泥用于淀粉肠并不算违规](https://so.toutiao.com/search?keyword=专家：鸡骨泥用于淀粉肠并不算违规)
+1. [赵丽颖新剧首播口碑](https://so.toutiao.com/search?keyword=赵丽颖新剧首播口碑)
+1. [老外感慨凌晨的中国非常安全](https://so.toutiao.com/search?keyword=老外感慨凌晨的中国非常安全)
+1. [《与凤行》沈璃和孙悟空有什么区别](https://so.toutiao.com/search?keyword=《与凤行》沈璃和孙悟空有什么区别)
+1. [21岁百万粉女网红被判刑](https://so.toutiao.com/search?keyword=21岁百万粉女网红被判刑)
+1. [比亚迪将采用英伟达汽车芯片](https://so.toutiao.com/search?keyword=比亚迪将采用英伟达汽车芯片)
+1. [林剑班主任：他出身军人家庭](https://so.toutiao.com/search?keyword=林剑班主任：他出身军人家庭)
+1. [倪萍分享减重40斤方法](https://so.toutiao.com/search?keyword=倪萍分享减重40斤方法)
+1. [媒体：娃哈哈不是“神”](https://so.toutiao.com/search?keyword=媒体：娃哈哈不是“神”)
+1. [社牛英语老师偶遇邓超](https://so.toutiao.com/search?keyword=社牛英语老师偶遇邓超)
+1. [王楚钦世界排名占据三项第一](https://so.toutiao.com/search?keyword=王楚钦世界排名占据三项第一)
+1. [山西一男子参加减肥训练营猝死](https://so.toutiao.com/search?keyword=山西一男子参加减肥训练营猝死)
+1. [天水麻辣烫怎么火的？甘肃文旅揭秘](https://so.toutiao.com/search?keyword=天水麻辣烫怎么火的？甘肃文旅揭秘)
+1. [英伟达“新核弹”B200发布](https://so.toutiao.com/search?keyword=英伟达“新核弹”B200发布)
+1. [县以下恢复“政社合一”体制现实吗](https://so.toutiao.com/search?keyword=县以下恢复“政社合一”体制现实吗)
+1. [午评：A股震荡调整创业板指跌0.65%](https://so.toutiao.com/search?keyword=午评：A股震荡调整创业板指跌0.65%)
+1. [新西兰外长称与中方会晤愉快友好](https://so.toutiao.com/search?keyword=新西兰外长称与中方会晤愉快友好)
+1. [天水爆火的绝不止麻辣烫](https://so.toutiao.com/search?keyword=天水爆火的绝不止麻辣烫)
+1. [报告称台海若爆发冲突美弹药或不足](https://so.toutiao.com/search?keyword=报告称台海若爆发冲突美弹药或不足)
+1. [许家印曾指导硕士写财务风险论文](https://so.toutiao.com/search?keyword=许家印曾指导硕士写财务风险论文)
+1. [当中华小子小虎发型照进现实](https://so.toutiao.com/search?keyword=当中华小子小虎发型照进现实)
+1. [南昌市政协原副秘书长被开除公职](https://so.toutiao.com/search?keyword=南昌市政协原副秘书长被开除公职)
+1. [日本时隔17年加息 结束负利率时代](https://so.toutiao.com/search?keyword=日本时隔17年加息+结束负利率时代)
+1. [女孩被野猴咬伤](https://so.toutiao.com/search?keyword=女孩被野猴咬伤)
+1. [三只羊就销售315点名梅菜扣肉致歉](https://so.toutiao.com/search?keyword=三只羊就销售315点名梅菜扣肉致歉)
+1. [男子戴硅胶面具进上海小区偷盗](https://so.toutiao.com/search?keyword=男子戴硅胶面具进上海小区偷盗)
+1. [开封王婆回应爆火](https://so.toutiao.com/search?keyword=开封王婆回应爆火)
+1. [网友：不能因315就否认淀粉肠行业](https://so.toutiao.com/search?keyword=网友：不能因315就否认淀粉肠行业)
+1. [离婚冷静期间丈夫捅杀妻子案将开庭](https://so.toutiao.com/search?keyword=离婚冷静期间丈夫捅杀妻子案将开庭)
+1. [江苏盐城滨海县海域发生3.5级地震](https://so.toutiao.com/search?keyword=江苏盐城滨海县海域发生3.5级地震)
+1. [班主任对校园暴力“放狠话”](https://so.toutiao.com/search?keyword=班主任对校园暴力“放狠话”)
+1. [博主：比亚迪清北校招让我理解张雪峰](https://so.toutiao.com/search?keyword=博主：比亚迪清北校招让我理解张雪峰)
+1. [胡塞武装为何能造出高超音速导弹](https://so.toutiao.com/search?keyword=胡塞武装为何能造出高超音速导弹)
+1. [男子为骗保半年出了70起交通事故](https://so.toutiao.com/search?keyword=男子为骗保半年出了70起交通事故)
+1. [网约车司机称每天跑够8小时才回本](https://so.toutiao.com/search?keyword=网约车司机称每天跑够8小时才回本)
 1. [沈阳发生车祸多人倒地不起](https://so.toutiao.com/search?keyword=沈阳发生车祸多人倒地不起)
 1. [河北警方：初中生被害案系有预谋作案](https://so.toutiao.com/search?keyword=河北警方：初中生被害案系有预谋作案)
 1. [大熊猫美香添添视频造假？官方辟谣](https://so.toutiao.com/search?keyword=大熊猫美香添添视频造假？官方辟谣)
-1. [主播曝“上门按摩”服务套路](https://so.toutiao.com/search?keyword=主播曝“上门按摩”服务套路)
-1. [英伟达官宣世界首款人形机器人模型](https://so.toutiao.com/search?keyword=英伟达官宣世界首款人形机器人模型)
-1. [开封王婆回应爆火](https://so.toutiao.com/search?keyword=开封王婆回应爆火)
-1. [21岁百万粉女网红被判刑](https://so.toutiao.com/search?keyword=21岁百万粉女网红被判刑)
-1. [媒体：娃哈哈不是“神”](https://so.toutiao.com/search?keyword=媒体：娃哈哈不是“神”)
 1. [山西19岁少年疑因多次卖血身亡](https://so.toutiao.com/search?keyword=山西19岁少年疑因多次卖血身亡)
 1. [恒大地产放弃申辩权利](https://so.toutiao.com/search?keyword=恒大地产放弃申辩权利)
-1. [县以下恢复“政社合一”体制现实吗](https://so.toutiao.com/search?keyword=县以下恢复“政社合一”体制现实吗)
 1. [初中生被杀案涉事校长已停职？官方回应](https://so.toutiao.com/search?keyword=初中生被杀案涉事校长已停职？官方回应)
-1. [老外感慨凌晨的中国非常安全](https://so.toutiao.com/search?keyword=老外感慨凌晨的中国非常安全)
-1. [林剑班主任：他出身军人家庭](https://so.toutiao.com/search?keyword=林剑班主任：他出身军人家庭)
 1. [高速抓到逃费车辆疑似小米SU7](https://so.toutiao.com/search?keyword=高速抓到逃费车辆疑似小米SU7)
-1. [比亚迪将采用英伟达汽车芯片](https://so.toutiao.com/search?keyword=比亚迪将采用英伟达汽车芯片)
 1. [天水连夜把8000年前的“小祖宗”请出来](https://so.toutiao.com/search?keyword=天水连夜把8000年前的“小祖宗”请出来)
-1. [博主：比亚迪清北校招让我理解张雪峰](https://so.toutiao.com/search?keyword=博主：比亚迪清北校招让我理解张雪峰)
-1. [三只羊就销售315点名梅菜扣肉致歉](https://so.toutiao.com/search?keyword=三只羊就销售315点名梅菜扣肉致歉)
 1. [14辆小米汽车逃高速费](https://so.toutiao.com/search?keyword=14辆小米汽车逃高速费)
-1. [赵丽颖新剧首播口碑](https://so.toutiao.com/search?keyword=赵丽颖新剧首播口碑)
 1. [中国为何不惧西方“绞杀”C919飞机](https://so.toutiao.com/search?keyword=中国为何不惧西方“绞杀”C919飞机)
 1. [湖南小伙带编入伍](https://so.toutiao.com/search?keyword=湖南小伙带编入伍)
 1. [一部悬疑大片：凯特王妃去哪儿了](https://so.toutiao.com/search?keyword=一部悬疑大片：凯特王妃去哪儿了)
-1. [天水麻辣烫怎么火的？甘肃文旅揭秘](https://so.toutiao.com/search?keyword=天水麻辣烫怎么火的？甘肃文旅揭秘)
-1. [网友：不能因315就否认淀粉肠行业](https://so.toutiao.com/search?keyword=网友：不能因315就否认淀粉肠行业)
-1. [《与凤行》沈璃和孙悟空有什么区别](https://so.toutiao.com/search?keyword=《与凤行》沈璃和孙悟空有什么区别)
 1. [以色列坚持进攻拉法引多方担忧](https://so.toutiao.com/search?keyword=以色列坚持进攻拉法引多方担忧)
 1. [多国领导人祝贺普京连任](https://so.toutiao.com/search?keyword=多国领导人祝贺普京连任)
-1. [老外打车不给钱还骂的哥蠢货](https://so.toutiao.com/search?keyword=老外打车不给钱还骂的哥蠢货)
-1. [许家印曾指导硕士写财务风险论文](https://so.toutiao.com/search?keyword=许家印曾指导硕士写财务风险论文)
 1. [英媒称有人目击凯特王妃现身](https://so.toutiao.com/search?keyword=英媒称有人目击凯特王妃现身)
-1. [班主任对校园暴力“放狠话”](https://so.toutiao.com/search?keyword=班主任对校园暴力“放狠话”)
 1. [邱毅：韩国瑜欲建台立法机构新秩序](https://so.toutiao.com/search?keyword=邱毅：韩国瑜欲建台立法机构新秩序)
 1. [现在小学生身高就是个迷](https://so.toutiao.com/search?keyword=现在小学生身高就是个迷)
 1. [证监会开出历史第二大罚单](https://so.toutiao.com/search?keyword=证监会开出历史第二大罚单)
 1. [老人退休金被冒领16年 金额超20万](https://so.toutiao.com/search?keyword=老人退休金被冒领16年+金额超20万)
 1. [国足新帅说艾克森对国足很重要](https://so.toutiao.com/search?keyword=国足新帅说艾克森对国足很重要)
 1. [普京掌权20年俄罗斯强大了吗](https://so.toutiao.com/search?keyword=普京掌权20年俄罗斯强大了吗)
-1. [胡塞武装为何能造出高超音速导弹](https://so.toutiao.com/search?keyword=胡塞武装为何能造出高超音速导弹)
 1. [假想台海战争 美日大搞夺岛训练](https://so.toutiao.com/search?keyword=假想台海战争+美日大搞夺岛训练)
 1. [南水北调工程累计调水700亿立方米](https://so.toutiao.com/search?keyword=南水北调工程累计调水700亿立方米)
 1. [网约车司机称每天跑够8小时才够回本](https://so.toutiao.com/search?keyword=网约车司机称每天跑够8小时才够回本)
 1. [河南驻马店通报中学生跳楼事件](https://so.toutiao.com/search?keyword=河南驻马店通报中学生跳楼事件)
-1. [男子为骗保半年出了70起交通事故](https://so.toutiao.com/search?keyword=男子为骗保半年出了70起交通事故)
 1. [女生连扇跪地男生耳光 学校回应](https://so.toutiao.com/search?keyword=女生连扇跪地男生耳光+学校回应)
 1. [女生拍帅气新兵被男友抓包](https://so.toutiao.com/search?keyword=女生拍帅气新兵被男友抓包)
 1. [台扬言增兵金门 三大舰机打头阵](https://so.toutiao.com/search?keyword=台扬言增兵金门+三大舰机打头阵)
-1. [王楚钦世界排名占据三项第一](https://so.toutiao.com/search?keyword=王楚钦世界排名占据三项第一)
 1. [女孩被12岁男孩杀害 家属坚持申诉](https://so.toutiao.com/search?keyword=女孩被12岁男孩杀害+家属坚持申诉)
 1. [“7090政策”退出上海土地市场](https://so.toutiao.com/search?keyword=“7090政策”退出上海土地市场)
 1. [好友爆料泰森出场费2000万美元](https://so.toutiao.com/search?keyword=好友爆料泰森出场费2000万美元)
-1. [男子戴硅胶面具进上海小区偷盗](https://so.toutiao.com/search?keyword=男子戴硅胶面具进上海小区偷盗)
-1. [当中华小子小虎发型照进现实](https://so.toutiao.com/search?keyword=当中华小子小虎发型照进现实)
 1. [TVB老戏骨陈狄克病逝](https://so.toutiao.com/search?keyword=TVB老戏骨陈狄克病逝)
 1. [黄仁勋宣布推出新一代AI芯片](https://so.toutiao.com/search?keyword=黄仁勋宣布推出新一代AI芯片)
 1. [1个月全国新开甘肃麻辣烫超150家](https://so.toutiao.com/search?keyword=1个月全国新开甘肃麻辣烫超150家)
@@ -103,7 +122,6 @@
 1. [国际油价18日上涨](https://so.toutiao.com/search?keyword=国际油价18日上涨)
 1. [“熊猫不走”创始人否认失联：正筹钱](https://so.toutiao.com/search?keyword=“熊猫不走”创始人否认失联：正筹钱)
 1. [女生送男友进站后拍帅气新兵被抓包](https://so.toutiao.com/search?keyword=女生送男友进站后拍帅气新兵被抓包)
-1. [英伟达“新核弹”B200发布](https://so.toutiao.com/search?keyword=英伟达“新核弹”B200发布)
 1. [河南驻马店通报西平中学跳楼事件](https://so.toutiao.com/search?keyword=河南驻马店通报西平中学跳楼事件)
 1. [山东一厂家公开淀粉肠生产流程](https://so.toutiao.com/search?keyword=山东一厂家公开淀粉肠生产流程)
 1. [赵本山现身澳门国际喜剧节](https://so.toutiao.com/search?keyword=赵本山现身澳门国际喜剧节)
